--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <h2>
                     <i>
                         <div class="blago">
-                         Благотвори&shyтельный фонд<br> защиты природы
+                         Благо&shyтвори&shyтельный фонд<br> защиты природы
                         </div>
                      </i>
                 </h2>
