--- a/main.html
+++ b/main.html
@@ -170,14 +170,15 @@
                             <br>                   
                             <p>                                
                                     Российская Федерация<br>
-                                    398000<br>
+                                    398050<br>
                                     город Липецк<br>
-                                    улица Зегеля, д.1<br>                                                         
+                                    улица Гагарина, д.17<br>                                                         
                                     Благотворительный Фонд защиты животных "РОДИНА"                                                         
                             </p>
                         </div>
                         <div class="container">                            
-                            <strong>Телефон:</strong> +7(980)253-58-17
+                            <strong>Телефон:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong> +7(906)681-35-77<br>
+                            <strong>Бухгалтерия:</strong> +7(980)253-58-17
                         </div>
                         <div class="container">
                             <strong>E-mail:</strong> fond_rodina@mail.ru
