--- a/main.html
+++ b/main.html
@@ -173,7 +173,7 @@
                                     398050<br>
                                     город Липецк<br>
                                     улица Гагарина, д.17<br>                                                         
-                                    Благотворительный Фонд защиты животных "РОДИНА"                                                         
+                                    Благотворительный Фонд защиты природы "РОДИНА"                                                         
                             </p>
                         </div>
                         <div class="container">                            
@@ -196,7 +196,7 @@
                             <br>                   
                             <p>                                
                                 Наименование организации: 
-                                <normal> Благотворительный Фонд защиты животных "РОДИНА"<br>
+                                <normal> Благотворительный Фонд защиты природы "РОДИНА"<br>
                                 ОГРН 1234800007573<br>
                                 ИНН 4800008863<br>
                                 КПП 480001001<br>
