--- a/main.html
+++ b/main.html
@@ -9,6 +9,54 @@
 <body>
     <div class="page_news">
         <div class="menu">
+            <div class="bottom_menu">   
+                <div class="box">
+                    <a href="news.html" class="icon_box"> 
+                        <center>
+                            <img src="IMG/Icons/icon_flash.png" alt="icon flash">
+                            <br>
+                            <div class="icon_text">Новости</div>
+                        </center>                     
+                    </a>
+                </div>     
+                <div class="box">
+                    <a href="main.html#targets" class="icon_box"> 
+                        <center>
+                            <img src="IMG/Icons/icon_cheking_list.png" alt="icon flash">
+                            
+                            <div class="icon_text">Цели</div>
+                        </center>                     
+                    </a>
+                </div>     
+                <div class="box">
+                    <a href="actions.html" class="icon_box"> 
+                        <center>
+                            <img src="IMG/Icons/icon_deer_head.png" alt="icon flash">
+                            <br>
+                            <div class="icon_text">Акции</div>
+                        </center>                     
+                    </a>
+                </div>     
+                <div class="box">
+                    <a href="main.html#contacts" class="icon_box"> 
+                        <center>
+                            <img src="IMG/Icons/icon_man.png" alt="icon flash">
+                            <br>
+                            <div class="icon_text">Контакты</div>
+                        </center>                     
+                    </a>
+                </div>     
+                <div class="box">
+                    <a onclick="alert('hi !!!')"   class="icon_box"> 
+                        <center>
+                            <img src="IMG/Icons/icon_ruble_thin.png" alt="icon flash">
+                            <br>
+                            <div class="icon_text">Помощь</div>
+                        </center>                     
+                    </a>
+                </div>      
+            </div>
+
             <div class="text_menu">
                 <p>
                     <div class="references">
@@ -88,15 +136,10 @@
                                     <li>информирование населения об природоохранных акциях, мерах и мероприятих</li>
                                 </ul>
                             </p>
-                        </div>
-                        <!-- <div class="container">                            
-                            Container 21
-                        </div>
-                        <div class="container">
-                            Container 11
-                        </div> -->
+                        </div>             
                     </div>                    
                 </div>
+
                 <a name="projects"></a>
                 <div class="allnews">
                     <div id="news_header">Программы на 2024 год:</div>
@@ -124,6 +167,7 @@
                         </div> -->
                     </div>                    
                 </div>
+
                 <a name="structure"></a>
                 <div class="allnews">
                 <div id="news_header">Структура Фонда:</div>
@@ -184,7 +228,8 @@
                             <strong>E-mail:</strong> fond_rodina@mail.ru
                         </div>                        
                     </div>
-                </div>   
+                </div>  
+                 
                 <a name="bank"></a>
                 <div class="allnews">
                 <div id="news_header">Реквизиты:</div>
