--- a/actions.html
+++ b/actions.html
@@ -91,7 +91,7 @@
                     <div class="containers">
                         <div class="container">
                             <div class="img">
-                                <a href="">
+                                <a href="#">
                                     <img id="kasatki" src="IMG/old_technik.jpg">
                                 </a>
                                 <div class="photosign"></div>
