--- a/actions.html
+++ b/actions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="news.css">
+    <link rel="stylesheet" href="actions.css">
 </head>
 <body>
     <div class="page_news">
@@ -47,7 +47,7 @@
                     </a>
                 </div>     
                 <div class="box">
-                    <a onclick="alert('hi !!!')"   class="icon_box"> 
+                    <a onclick="alert('Вы можете внести свою долю в дело защиты природы перечислив сумму через СБП на телефон +7(916)116-19-18 Евгений Ф. Спасибо Вам!!!')"   class="icon_box"> 
                         <center>
                             <img src="IMG/Icons/icon_ruble_thin.png" alt="icon flash">
                             <br>
@@ -89,9 +89,10 @@
                 <div class="allnews">
                     <div id="news_header">Наши акции:</div>
                     <div class="containers">
-                        <div class="container">
+                        <div class="container_1">
+                            <div class="header_mobile">Акция "Сбор старой электроники"</div>
                             <div class="img">
-                                <a href="#">
+                                <a href="action_text.html">
                                     <img id="kasatki" src="IMG/old_technik.jpg">
                                 </a>
                                 <div class="photosign"></div>
@@ -100,35 +101,38 @@
                                 <div class="header">Акция "Сбор старой электроники"</div>
                                 <br>
                                 <div class="text">
-                                    <a href="*">В течении недели с 1-го по 6-е авпреля 2024 года в Липецке прошла акция по сбору старой электротехники</a> 
+                                    <a href="action_text.html">В течении недели с 1-го по 6-е авпреля 2024 года в Липецке прошла акция по сбору старой электротехники</a> 
                                 </div>
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="action_text.html">Подробности</a>
                                 </div>                                
                             </div>
                         </div>
-                        <div class="container">                            
+                        <div class="container_2">                            
                             <div class="news">
                                 <div class="header">Акция "Покорми птиц зимой - 2024"</div>
                                 <br>
                                 <div class="text">
-                                    <a href="*">Наши сотрудники активно привлекали подрастающее поколение для подкормки пернатых обитателей Липецка в зимний период</a> 
+                                    <a href="action_text.html#news_2">Наши сотрудники активно привлекали подрастающее поколение для подкормки пернатых обитателей Липецка в зимний период</a> 
                                 </div>
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="action_text.html#news_2">Подробности</a>
                                 </div>                                
                             </div>
-                            <div class="img">
-                                <a href="*">
+                                <div class="img">
+                                <div class="header_mobile"></div>
+                                <a href="action_text.html#news_2">
                                     <img id="kasatki" src="IMG/give_meal_birds.jpg">
                                     </a>
                                 <div class="photosign"></div>
                             </div>
+                            <div class="header_mobile">Акция "Покорми птиц зимой - 2024"</div>
                         </div>
-                        <div class="container">
+                        <div class="container_1">
                             <div class="img">
+                                <div class="header_mobile">Акция "Посади дерево – подари городу чистый воздух"</div>
                                 <a href="*">
                                     <img id="kasatki" src="IMG/trees.webp">
                                 </a>
