--- a/actions.html
+++ b/actions.html
@@ -133,7 +133,7 @@
                         <div class="container_1">
                             <div class="img">
                                 <div class="header_mobile">Акция "Посади дерево – подари городу чистый воздух"</div>
-                                <a href="*">
+                                <a href="action_text.html#news_1">
                                     <img id="kasatki" src="IMG/trees.webp">
                                 </a>
                                 <div class="photosign">© Фото : пресс-служба администрации Липецка</div>
@@ -142,12 +142,12 @@
                                 <div class="header">Акция "Посади дерево – подари городу чистый воздух"</div>
                                 <br>
                                 <div class="text">
-                                    <a href="*">23 сентября в Липецке в микрорайонах Университетский и 
+                                    <a href="action_text.html#news_1">23 сентября в Липецке в микрорайонах Университетский и 
                                         Европейский прошла акция по посадке деревьев</a> 
                                 </div>
                                 <br>
                                 <div class="details">                                    
-                                    <a class="detail" href="*">Подробности</a>
+                                    <a class="detail" href="action_text.html#news_1">Подробности</a>
                                 </div>                                
                             </div>
                         </div>                       
