--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="page_news">
@@ -47,7 +48,7 @@
                     </a>
                 </div>     
                 <div class="box">
-                    <a onclick="alert('hi !!!')"   class="icon_box"> 
+                    <a onclick="openModalWindow()"   class="icon_box"> 
                         <center>
                             <img src="IMG/Icons/icon_ruble_thin.png" alt="icon flash">
                             <br>
@@ -71,7 +72,7 @@
             </div>
             
             <!-- <div id="button_1" onclick="prompt('Введите ваш номер карточки \n и сумму перевода', '16 цифр')"> -->
-            <div id="button_1" onclick="alert('Вы можете помочь сохранить нашу природу \nперечислив деньги через СБП \nна тел.: +7(916)116-19-18 \nПолучатель Евгений Ф.\n\nБлагодарим Вас за вашу неравнодушность!!!')">
+            <div id="button_1" onclick="openModalWindow()">
                 <div id="button_text">
                     <center>
                         <span id="make">Сделать</span> 
