--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="news.css">
+    <script src="script.js"></script>
 </head>
 <body>      
     <div class="page_news">
@@ -48,7 +49,7 @@
                     </a>
                 </div>     
                 <div class="box">
-                    <a onclick="alert('hi !!!')"   class="icon_box"> 
+                    <a onclick="openModalWindow()" class="icon_box"> 
                         <center>
                             <img src="IMG/Icons/icon_ruble_thin.png" alt="icon flash">
                             <br>
@@ -75,7 +76,7 @@
                 </p>
             </div>
             
-            <div id="button_1"  onclick="prompt('Введите ваш номер карточки \n ', '16 цифр банковской карты')">
+            <div id="button_1"  onclick="openModalWindow()" >
                 <div id="button_text">
                     <center>
                         <span id="make">Сделать</span> 
