--- a/actions.html
+++ b/actions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="actions.css">
+    <link rel="stylesheet" href="modal_win.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -155,6 +156,19 @@
                     </div>                    
                 </div>
         </div>
+    </div>
+    <!-- Unvisible modal window -->
+    <div class="modalWindow" id="myModal">
+        <div class="modalContainer">
+            <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
+            <center>
+                <h2>Оказать посильную помощь</h2><br>
+                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
+                <p id="mainText">Получатель Евгений Ф.</p><br>
+                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
+                <h3>Сохраним природу вместе!</h3>
+            </center>
+        </div>        
     </div>
 </body>
 </html>
