--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="modal_win.css">
     <script src="script.js"></script>
 </head>
 <body>
@@ -198,16 +199,16 @@
                         </div>
                     </div>
                 </div>  
-                <a name="contacts"></a>
+                <a name="contacts"></a>                
                 <div class="allnews">
                 <div id="news_header">Контакты:</div>
                     <div class="containers">
                         <div class="container">
                             <p id="header">
                                 <strong>Местонахождение Фонда: </strong>
-                            </p> 
-                            <br>                   
-                            <p>                                
+                            </p>                         
+                            <br>  
+                            <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aa7a253113cbca00c078713db68fa11688edb16b5fb0cca0968a6e1872a174f7e&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
                                     Российская Федерация<br>
                                     398050<br>
                                     город Липецк<br>
@@ -251,6 +252,19 @@
                     </div>
                 </div>    
         </div>
+    </div>
+    <!-- Unvisible modal window -->
+    <div class="modalWindow" id="myModal">
+        <div class="modalContainer">
+            <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
+            <center>
+                <h2>Оказать посильную помощь</h2><br>
+                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
+                <p id="mainText">Получатель Евгений Ф.</p><br>
+                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
+                <h3>Сохраним природу вместе!</h3>
+            </center>
+        </div>        
     </div>
 </body>
 </html>
