--- a/action_text.html
+++ b/action_text.html
@@ -94,6 +94,76 @@
                     <div id="news_header"></div>
                     <div class="containers">
                         <div class="container">
+                            <a name="news_5"></a>
+                            <center>
+                                <div class="header">Помощь бойцам Специальной Военной Операции (СВО)</div>                                                    
+                            <div class="img">                                
+                                    <img id="photo" src="IMG/pobeda.jpg">
+                                    <div class="photosign"></div>
+                            </div>  
+                            </center> 
+                            <div class="news">                                
+                                <div class="text">
+                                    <p>
+                                    «Благотворительный фонд «РОДИНА», совместно с Волонтёрским штабом Благотворительного фонда «Всё для Победы!», организует сбор средств для поддержки участников и ветеранов боевых действий». 
+                                    </p>
+                                    <p>
+                                    Каждый пожертвованный рубль приближает нашу Победу и спасает жизнь наших ребят и мирных жителей!
+                                    <br></p>
+                                    <p>
+                                    Желающие оказать помощь нашим ребятам могут сделать пожертвование нажав на кнопку "Сделать пожертвование" на этом экране
+                                    </p>
+                                </div> 
+                                <div class="source">                                    
+                                        <div class="author"><strong></strong></div>
+                                        <div class="source_url"><strong>Источник: https://pobeda.onf.ru</strong></div>                                                                      
+                                </div>                               
+                                <div class="details">                                                                      
+                                   <center>
+                                        <a class="detail" href="actions.html#news_5">Назад</a>
+                                   </center> 
+                                </div>                                
+                            </div>
+                        </div> 
+
+                        <div class="container">
+                            <a name="news_4"></a>
+                            <center>
+                                <div class="header">Помощь жителям Луганской и Донецкой областей</div>   
+                            
+                                                         
+                            <div class="img">                                
+                                    <img id="photo" src="IMG/Mariupol.webp">
+                                    <div class="photosign"></div>
+                            </div>  
+                            </center>  
+                            <div class="news">                                
+                                <div class="text">
+                                    <p>
+                                    Летом 2024 года «Благотворительный фонд «РОДИНА» принимал участие в доставке гуманитарной помощи на Донбасс.
+                                    </p>
+                                    <p>
+                                    Маршрут пролегал через Луганск, Донецк, Мариуполь и другие населённые пункты.
+                                    Обстрелы этих городов продолжаются. Желаем сотруднику нашего фонда, который во время поезки получил контузию, скорейшего выздоровления,
+                                    а жителям новых регионов скорейшего наступления мирной жизни. 
+                                        <br></p>
+                                    <p>
+                                    Мы вас очень просим оказать посильную помощь жителям Новороссии, сделав пожертвование (нажав на кнопку "Сделать пожертвование") на этом экране
+                                    </p>
+                                </div> 
+                                <div class="source">                                    
+                                        <div class="author"><strong></strong></div>
+                                        <div class="source_url"><strong></strong></div>                                                                      
+                                </div>                               
+                                <div class="details">                                                                      
+                                   <center>
+                                        <a class="detail" href="actions.html#news_4">Назад</a>
+                                   </center> 
+                                </div>                                
+                            </div>
+                        </div>
+
+                        <div class="container">
                             <a name="news_3"></a>
                             <center>
                                 <div class="header">НЛМК организовал для липчан экологическую акцию и экофестиваль «Беспроводная весна»</div>   
@@ -209,18 +279,20 @@
         </div>
     </div>
 
-    <!-- Unvisible modal window -->
-    <div class="modalWindow" id="myModal">
-        <div class="modalContainer">
-            <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
-            <center>
-                <h2>Оказать посильную помощь</h2><br>
-                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
-                <p id="mainText">Получатель Евгений Ф.</p><br>
-                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
-                <h3>Сохраним природу вместе!</h3>
-            </center>
-        </div>        
-    </div>
+   <!-- Unvisible modal window -->
+   <div class="modalWindow" id="myModal">
+    <div class="modalContainer">
+        <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
+        <center>
+            <h2>Оказать посильную помощь</h2><br>
+            <p id="mainText">Вы можете перечислить средства в любом размере отсканировав нижеуказанный QR-код.</p><br>
+            <center> 
+            <img class="shtrih_code" src="IMG/shtrih_code.jpg">
+            </center><br>
+            <p><strong>Огромное Вам СПАСИБО за вашу помощь!</strong></p><br>
+            <!-- <h3>К Победе вместе!!!</h3> -->
+        </center>
+    </div>        
+</div>
 </body>
 </html>
