--- a/actions.html
+++ b/actions.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="page_news">
+        <!-- Menu bar -->
         <div class="menu">
             <div class="bottom_menu">   
                 <div class="box">
@@ -87,10 +88,55 @@
                 <center>@FonarevEvgeny</center>
             </div>
         </div>
+
+        <!-- Main content -->
         <div class="content">
                 <div class="allnews">
                     <div id="news_header">Наши акции:</div>
                     <div class="containers">
+                        <div class="container_1">
+                            <div class="header_mobile">Акция "Помощь участникам СВО"</div>
+                            <div class="img">
+                                <a name="news_5" href="action_text.html">
+                                    <img id="kasatki" src="IMG/army_helpl.jpg">
+                                </a>
+                                <div class="photosign"></div>
+                            </div>
+                            <div class="news">
+                                <div class="header">Акция "Помощь участникам СВО"</div>
+                                <br>
+                                <div class="text">
+                                    <a href="action_text.html">«Благотворительный фонд «РОДИНА», взаимодействуя  с <strong>Волонтёрским штабом Благотворительного фонда «Всё для Победы!»</strong>, организует сбор средств для поддержки участников и ветеранов боевых действий</a> 
+                                </div>
+                                <br>
+                                <div class="details">                                    
+                                    <a class="detail" href="action_text.html">Подробности</a>
+                                </div>                                
+                            </div>
+                        </div>
+                        <div class="container_2">                            
+                            <div class="news">
+                                <div class="header">Акция "Помощь жителям Донбасса"</div>
+                                <br>
+                                <div class="text">
+                                    <a href="action_text.html#news_4">Летом 2024 года наш фонд участвовал в доставке гуманитарной помощи в Луганскую и на Донецкую области.
+                                        <br>Пожелаем скорейшего выздоровления и крепкого здоровья сотруднику нашего фонда, которых при доставке помощи получил контузию.
+                                    </a> 
+                                </div>
+                                <br>
+                                <div class="details">                                    
+                                    <a class="detail" href="action_text.html#news_4">Подробности</a>
+                                </div>                                
+                            </div>
+                                <div class="img">
+                                <div name="news_4" class="header_mobile"></div>
+                                <a href="action_text.html#news_2">
+                                    <img id="kasatki" src="IMG/gum_help.jpg">
+                                    </a>
+                                <div class="photosign"></div>
+                            </div>
+                            <div class="header_mobile">Акция "Покорми птиц зимой - 2024"</div>
+                        </div>
                         <div class="container_1">
                             <div class="header_mobile">Акция "Сбор старой электроники"</div>
                             <div class="img">
@@ -106,7 +152,7 @@
                                     <a href="action_text.html">В течении недели с 1-го по 6-е авпреля 2024 года в Липецке прошла акция по сбору старой электротехники</a> 
                                 </div>
                                 <br>
-                                <div class="details">                                    
+                                <div name="news_3" class="details">                                    
                                     <a class="detail" href="action_text.html">Подробности</a>
                                 </div>                                
                             </div>
@@ -163,10 +209,12 @@
             <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
             <center>
                 <h2>Оказать посильную помощь</h2><br>
-                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
-                <p id="mainText">Получатель Евгений Ф.</p><br>
-                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
-                <h3>Сохраним природу вместе!</h3>
+                <p id="mainText">Вы можете перечислить средства в любом размере отсканировав нижеуказанный QR-код.</p><br>
+                <center> 
+                <img class="shtrih_code" src="IMG/shtrih_code.jpg">
+                </center><br>
+                <p><strong>Огромное Вам СПАСИБО за вашу помощь!</strong></p><br>
+                <!-- <h3>К Победе вместе!!!</h3> -->
             </center>
         </div>        
     </div>
