--- a/main.html
+++ b/main.html
@@ -213,7 +213,7 @@
                                     398050<br>
                                     город Липецк<br>
                                     улица Гагарина, д.17<br>                                                         
-                                    Благотворительный Фонд защиты природы "РОДИНА"                                                         
+                                    Благотворительный Фонд "РОДИНА"                                                         
                             </p>
                         </div>
                         <div class="container">                            
@@ -237,7 +237,7 @@
                             <br>                   
                             <p>                                
                                 Наименование организации: 
-                                <normal> Благотворительный Фонд защиты природы "РОДИНА"<br>
+                                <normal> Благотворительный Фонд "РОДИНА"<br>
                                 ОГРН 1234800007573<br>
                                 ИНН 4800008863<br>
                                 КПП 480001001<br>
@@ -259,10 +259,12 @@
             <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
             <center>
                 <h2>Оказать посильную помощь</h2><br>
-                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
-                <p id="mainText">Получатель Евгений Ф.</p><br>
-                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
-                <h3>Сохраним природу вместе!</h3>
+                <p id="mainText">Вы можете перечислить средства в любом размере отсканировав нижеуказанный QR-код.</p><br>
+                <center> 
+                <img class="shtrih_code" src="IMG/shtrih_code.jpg">
+                </center><br>
+                <p><strong>Огромное Вам СПАСИБО за вашу помощь!</strong></p><br>
+                <!-- <h3>К Победе вместе!!!</h3> -->
             </center>
         </div>        
     </div>
