--- a/news.html
+++ b/news.html
@@ -166,10 +166,12 @@
             <p type="button"  align="right" id="closeX" onclick="closeModalWin()"><strong>X</strong></p>
             <center>
                 <h2>Оказать посильную помощь</h2><br>
-                <p id="mainText">Вы можете перечислить средства в любом размере через СБП на телефон <strong>+7(916)116-19-18</strong>.</p>
-                <p id="mainText">Получатель Евгений Ф.</p><br>
-                <p><strong>Огромное Вам спасибо за ваше участие!</strong></p><br>
-                <h3>Сохраним природу вместе!</h3>
+                <p id="mainText">Вы можете перечислить средства в любом размере отсканировав нижеуказанный QR-код.</p><br>
+                <center> 
+                <img class="shtrih_code" src="IMG/shtrih_code.jpg">
+                </center><br>
+                <p><strong>Огромное Вам СПАСИБО за вашу помощь!</strong></p><br>
+                <!-- <h3>К Победе вместе!!!</h3> -->
             </center>
         </div>        
     </div>
