--- a/actions.html
+++ b/actions.html
@@ -135,7 +135,7 @@
                                     </a>
                                 <div class="photosign"></div>
                             </div>
-                            <div class="header_mobile">Акция "Покорми птиц зимой - 2024"</div>
+                            <div class="header_mobile">Акция "Помощь жителям Донбасса"</div>
                         </div>
                         <div class="container_1">
                             <div class="header_mobile">Акция "Сбор старой электроники"</div>
