--- a/main.html
+++ b/main.html
@@ -217,11 +217,11 @@
                                     Благотворительный Фонд "РОДИНА" 
                                     <br>
                                     <div class="container">                            
-                                        <strong>Телефон:&nbsp;</strong> +7(906)681-35-77<br>
+                                        <strong>Телефон:&nbsp;</strong> +7(916)012-01-08<br>
                                         <!-- <strong>Бухгалтерия:</strong> +7(980)253-58-17 -->
                                     </div>
                                     <div class="container">
-                                        <strong>E-mail:&nbsp;&nbsp;&nbsp;&nbsp;</strong> fond_rodina@mail.ru
+                                        <strong>E-mail:&nbsp;&nbsp;&nbsp;&nbsp;</strong> bf_rodina@mail.ru
                                     </div> 
                                 </div> 
                                 
